Handle line break on recipe description, add potatoes to items, fix long detailed recipe render and change item menu background color

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,7 @@
 .recipe-container {
   position: relative;
   margin: 4rem auto;
+  z-index: 3;
 }
 
 .detailed-recipe-background {
